@startuml

title __NULL_OBJECT's Class Diagram__\n

  namespace in.ashwanik.pdp.null_object {
    interface in.ashwanik.pdp.null_object.Cache {
        {abstract} + get()
        {abstract} + put()
    }
  }
  

  namespace in.ashwanik.pdp.null_object {
    class in.ashwanik.pdp.null_object.CacheService {
        + CacheService()
        ~ get()
        ~ put()
    }
  }
  

  namespace in.ashwanik.pdp.null_object {
    class in.ashwanik.pdp.null_object.NullCache {
        + get()
        + put()
    }
  }
  

  namespace in.ashwanik.pdp.null_object {
    class in.ashwanik.pdp.null_object.RedisCache {
        + RedisCache()
        + get()
        + put()
    }
  }
  

  namespace in.ashwanik.pdp.null_object {
    interface in.ashwanik.pdp.null_object.RedisClient {
        {abstract} + get()
        {abstract} + save()
    }
  }
  

  in.ashwanik.pdp.null_object.CacheService o-- in.ashwanik.pdp.null_object.Cache : cache
  in.ashwanik.pdp.null_object.NullCache .up.|> in.ashwanik.pdp.null_object.Cache
  in.ashwanik.pdp.null_object.RedisCache .up.|> in.ashwanik.pdp.null_object.Cache
  in.ashwanik.pdp.null_object.RedisCache o-- in.ashwanik.pdp.null_object.RedisClient : redisClient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
